# aide

./: Cargo.toml  README.md
apps/aide-cli/: Cargo.toml
apps/aide-cli/src/: chat.rs  cli.rs  input.rs  main.rs  theme.rs
apps/aide-core/: Cargo.toml
apps/aide-core/src/: lib.rs
apps/aide-core/src/models/: inference.rs  mod.rs
apps/aide-core/src/system/: mod.rs
src/: main.rs  theme.rs  ui.rs
src/cli/: chat.rs  clear.rs  input.rs  mod.rs  models_cmd.rs  setup.rs  theme_cmd.rs
src/memory/: mod.rs
src/models/: inference.rs  mod.rs  stable_diffusion.rs
