[package]
name = "aide"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive"] }
# Hardware information
sysinfo = "0.30"
# Async runtime
tokio = { version = "1.36", features = ["full"] }
# Error handling
anyhow = "1.0"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Terminal UI / Progress bars
indicatif = "0.17"
colored = "2.1"
dialoguer = "0.11"
rustyline = "12.0"
