[package]
name = "aide"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive"] }
# Hardware information
sysinfo = "0.30"
# Async runtime
tokio = { version = "1.36", features = ["full"] }
# Error handling
anyhow = "1.0"
# Path helper
dirs = "5.0"
# Networking & Downloads
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
# AI Inference
llama-cpp-2 = "0.1.18"
llama-cpp-sys-2 = "0.1"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Terminal UI / Progress bars
indicatif = "0.17"
colored = "2.1"
dialoguer = "0.11"
rustyline = "12.0"
encoding_rs = "0.8"
# SQLite memory
rusqlite = { version = "0.31", features = ["bundled"] }
# Terminal events (ESC detection)
crossterm = "0.27"
# Markdown rendering in terminal
termimad = "0.23"
# Syntax highlighting for code blocks
syntect = "5.2"
